k8s/manifest/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: restapi-flask
  name: restapi-flask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: restapi-flask
  template:
    metadata:
      labels:
        app: restapi-flask
    spec:
      containers:
      - image: restapi-flask:latest
        imagePullPolicy: IfNotPresent
        name: restapi-flask
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
        resources:
          limits:
            cpu: 200m
            memory: 250Mi
          requests:
            cpu: 100m
            memory: 128Mi
